[package]
name = "filters"
version = "0.2.0"
authors = ["Jean"]
edition = "2018"

#[profile.release]
#opt-level = "s"
#lto = true
#codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
uuid = "0.8"
rand = "0.8.4"
xml-rs = "0.8.4"